--- a/project1/Makefile
+++ b/project1/Makefile
@@ -6,6 +6,8 @@ LDFLAGS=-L/afs/nd.edu/user14/csesoft/2018-spring/lib -lzmq
 INCLUDE=/afs/nd.edu/user14/csesoft/2018-spring/include
 # ---------------------------- END DO NOT EDIT
 
+# set environment variable if shared libraries not linked:
+# setenv LD_LIBRARY_PATH /opt/und/local/lib:/opt/und/intel//compiler2016/lib:/opt/und/pgi/8.0/linux86-64/8.0/lib:/afs/nd.edu/i386_linux24/opt/und/matlab/9.1/sys/opengl/lib/glnxa64:/afs/nd.edu/user14/csesoft/2018-spring/lib
 
 CPPFLAGS += -std=c++11 -g
 LDFLAGS +=
